Fixed layout problem. Wrap

--- a/src/components/UI/DropZone/DropZone.css
+++ b/src/components/UI/DropZone/DropZone.css
@@ -1,5 +1,6 @@
 button.dropzone {
     text-wrap: inherit;
+    white-space: break-spaces;
 }
 
 .dropzone {
